fixed spacing between elements

--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,28 @@
     width: 90%;
     margin: auto;
 }
+
 .section {
     height: 100vh;
 }
+
 .bg-custom {
     background-color: rgb(241, 241, 230);
 }
-.orange{
+
+.orange {
     color: rgb(239, 96, 44);
     font-weight: bold;
 }
+
 .nav-link {
     color: black;
 }
-.nav-link:hover{
+
+.nav-link:hover {
     color: black;
 }
+
 #landing {
     background-image: url('../img//landing.png');
     background-size: 500px 700px;
@@ -25,44 +31,50 @@
 
     background-position: 50px bottom;
 }
-.hd-items{
+
+.hd-items {
     display: flex;
     gap: 50px;
     padding-top: 50px;
     margin-bottom: 0px;
 }
-.hd-item img{
-border-radius: 5px;
+
+.hd-item img {
+    border-radius: 5px;
 }
-.about{
-    
-   margin-top: 150px;
+
+.about {
+
+    margin-top: 200px;
 }
-.about-con{
-display: flex;
-flex-direction: column;
-height: 400px;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
-background-color: rgba(48, 94, 174, 0.078);
-backdrop-filter:blur(5px);
+
+.about-con {
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(48, 94, 174, 0.078);
+    backdrop-filter: blur(5px);
 }
-.about-hd{
+
+.about-hd {
     background-color: white;
     width: 500px;
-    align-self:  flex-end;
+    align-self: flex-end;
     padding: 50px;
     margin-top: -150px;
 }
-.about-bdy{
+
+.about-bdy {
     display: flex;
     padding: 0px 20px 0px 20px;
     justify-content: center;
     align-items: center;
 }
 
-.abt-sec{
+.abt-sec {
     display: flex;
     gap: 20px;
     background-color: white;
@@ -72,4 +84,3 @@ backdrop-filter:blur(5px);
 .footer {
     min-height: 30vh;
 }
-
